@@ -1,1 +1,0 @@
-(define-package "cursor-chg" "20150104.2139" "Change cursor dynamically, depending on the context." 'nil :url "http://www.emacswiki.org/cursor-chg.el" :keywords '("cursor" "accessibility"))
