@@ -1,6 +1,7 @@
 2015-12-28  Liu Xin  <meteor1113@qq.com>
 
 	* init/init-editor.el: Remove htmlize.
+	Remove cursor-chg.
 
 	* init.el: Split dotemacs.
 	Refactor.
